--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -64,7 +64,7 @@
     transition: all 0.5s ease;
   }
   
-  .active {
+  .navMenuActive {
     background-color: var(--bg-color);
     left: 0;
     opacity: 1;
